# trunk

./: .env.example  .gitignore  .trunk  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  agents.example.json  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.hygiene.json  tsconfig.json  vercel.json
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
api/: index.ts
cli/: package-lock.json  package.json  tsconfig.hygiene.json  tsconfig.json
docs/: api-reference.md  concepts.md  dogfooding.md  langgraph-adapter.md  launch-assets.md  multi-agent-coordination.md  notifications.md  patterns.md  quickstart.md  self-hosting.md  why-humans-in-the-loop.md
drizzle/: 0000_swift_clea.sql  0001_simple_wonder_man.sql  0002_wet_shriek.sql  0003_playbook_protocol.sql  0004_narrow_nuke.sql  0005_overconfident_absorbing_man.sql  0006_happy_tombstone.sql  0007_reflective_grandmaster.sql  0008_smart_rockslide.sql  0009_marvelous_silver_sable.sql  0010_adorable_ultron.sql  0012_silly_hellion.sql  0013_sturdy_gamora.sql  0014_clean_sister_grimm.sql  0015_dry_mole_man.sql  0016_foamy_morlun.sql  0017_gifted_black_tom.sql  0018_careful_harpoon.sql  0019_huge_valeria_richards.sql  0020_trunk_protocol_v1.sql  0021_room_collaboration_roles.sql  0022_agent_delegations.sql
python/: README.md
scripts/: check-mcp-tool-contracts.ts  check-protocol.ts  check-repo-hygiene.ts  dogfood-stats.ts
src/: app.ts  index.ts
tests/: adapter-routing.test.ts  api.behavior.test.ts  daemon-policy.test.ts  (+7 more)
(+136 files in other folders)
