[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trunk-sdk"
version = "0.1.0"
description = "Python SDK for Trunk agent-to-agent communication"
readme = "python/README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "usetrunk" }]
dependencies = []

[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]
